# huidu-led-rs

./: Cargo.toml  DESIGN.md  LICENSE  README.md
crates/huidu/: Cargo.toml
crates/huidu-proto/: Cargo.toml
crates/huidu-proto/src/: codec.rs  error.rs  file.rs  frame.rs  lib.rs  sdk_frame.rs
crates/huidu-proto/src/hd2020/: FONT-LICENSE.md  bitmap.rs  font.rs  frame.rs  mod.rs
crates/huidu-proto/src/sdk/: envelope.rs  method.rs  mod.rs  result.rs  xml.rs
crates/huidu-proto/src/sdk/messages/: boot_logo.rs  device_info.rs  files.rs  luminance.rs  mod.rs  network.rs  program.rs  screen.rs  server.rs  switch_time.rs  time.rs
crates/huidu-proto/tests/: golden.rs  hd2020_golden.rs
crates/huidu-proto/tests/fixtures/: hd2020_brightness.txt  hd2020_realtime_hi.txt  heartbeat.txt  sdk_hello.txt
crates/huidu/src/: commands.rs  config.rs  device.rs  error.rs  lib.rs  probe.rs  transport.rs  upload.rs
crates/huidu/src/screen/: config.rs  mod.rs
crates/huidu/tests/: commands.rs  handshake.rs  hd2020.rs  send_screen.rs  upload.rs
crates/huidu/tests/common/: mod.rs
docs/superpowers/plans/: 2026-07-18-huidu-proto-core.md  2026-07-19-huidu-file-upload.md  2026-07-19-huidu-hd2020-dispatch.md  2026-07-19-huidu-proto-hd2020.md  2026-07-19-huidu-proto-sdk-messages.md  2026-07-19-huidu-screen-builder.md  2026-07-19-huidu-sdk-command-surface.md  2026-07-19-huidu-transport-handshake.md
tools/: gen_hd2020_font.py
